--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=GlassesStore;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
